[package]
name = "autd3-backend-arrayfire"
version = "27.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "ArrayFire Backend for AUTD3"
repository = "https://github.com/shinolab/autd3-backend-arrayfire"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-driver = "27.0.0"
autd3-gain-holo = "27.0.0"
nalgebra = { version = "0.33.0", default-features = false, features = ["std"] }
arrayfire = "3.8.0"
rand = "0.8.5"
thiserror = "1.0.31"
bit-vec = "0.8.0"

[dev-dependencies]
anyhow = "1.0.86"
autd3 = "27.0.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5.1", features = ["html_reports"] }
rstest = "0.22.0"
assert_approx_eq = "1.1.0"
approx = "0.5.1"

[features]
default = []
bench-utilities = ["autd3-gain-holo/bench-utilities"]

[[bench]]
name = "holo"
path = "benches/holo.rs"
harness = false
