[package]
name = "autd3-backend-arrayfire"
version = "29.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "ArrayFire Backend for AUTD3"
repository = "https://github.com/shinolab/autd3-backend-arrayfire"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-core = { version = "29.0.0", features = ["acoustics", "derive", "gain"] }
autd3-gain-holo = { version = "29.0.0", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
arrayfire = { version = "3.8.0", default-features = false, features = ["algorithm", "arithmetic", "blas", "data", "indexing", "lapack"] }
rand = { version = "0.9.0", default-features = false }
thiserror = { version = "2.0.11", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.95", default-features = false }
autd3 = { version = "29.0.0", default-features = false }
rstest = { version = "0.24.0", default-features = false }
assert_approx_eq = { version = "1.1.0", default-features = false }
approx = { version = "0.5.1", default-features = false }

[features]
default = []
