[package]
name = "autd3-backend-arrayfire"
version = "32.1.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2024"

license = "MIT"
description = "ArrayFire Backend for AUTD3"
repository = "https://github.com/shinolab/autd3-backend-arrayfire"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-core = { version = "32.1.0", features = ["acoustics", "derive", "gain"] }
autd3-gain-holo = { version = "32.1.0", default-features = false }
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
arrayfire = { version = "3.8.0", default-features = false, features = ["algorithm", "arithmetic", "blas", "data", "indexing", "lapack"] }
rand = { version = "0.9.0", default-features = false }
thiserror = { version = "2.0.12", default-features = false }

[dev-dependencies]
anyhow = { version = "1.0.98", default-features = false }
autd3 = { version = "32.1.0", default-features = false }
rstest = { version = "0.25.0", default-features = false }
assert_approx_eq = { version = "1.1.0", default-features = false }
approx = { version = "0.5.1", default-features = false }

[features]
default = []
